# Swanson-Project

./: .env.example  .gitignore  AGENTS.md  ActualStatus.md  DesignArchitecture.md  HANDOFF.md  Project.md  README.md  Sprint.md  Sprint_Done.md  token-optimization.md
engine/: conftest.py  pyproject.toml
engine/config/: pilot.yaml
engine/src/discovery/: closed_discovery.py  run_closed_discovery.py
engine/src/graph/: build_graph.py  mesh.py
engine/src/ingest/: cache.py  download_corpus.py  entrez_client.py  rate_limiter.py
engine/src/relations/: __init__.py  base.py  coverage_report.py  estimate_cost.py  extract_corpus.py  gemini_source.py  mesh_synonyms.py  normalize.py  prompt.py
engine/src/validation/: run_open_discovery.py  run_time_slicing.py  time_slicing.py
engine/tests/: test_build_graph.py  test_cache.py  test_discovery.py  test_entrez_parse.py  test_open_discovery.py  test_parse_article.py  test_rate_limiter.py  test_time_slicing.py
supabase/: README.md
web/: README.md
